[package]
name = "mao"
version = "0.1.0"
authors = ["Aapuji", "SciDev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "1.4.1"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
term_size = "0.3.2"
textwrap = "0.16.0"
tinytemplate = "1.2.1"
